# minimal-viable-package

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: Makefile
docs/source/: conf.py  example.rst  index.rst
env/: mvp_env.yml
src/example/: __init__.py  welcome.py
test/: test_greeting.py
workflows/: main.yml
